--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 
     <footer>
-      <p>Developed by Holden and JS239</p>
+      <p>Developed by JS239</p>
     </footer>
     <script src="/javascripts/app.js"></script>
   </body>
