--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
 
 
     <footer>
-      <p>Developed by JS239</p>
+      <p>Developed by Holden and JS239</p>
     </footer>
+    <script src="/javascripts/contact.js"></script>
+    <script src="/javascripts/tag.js"></script>
     <script src="/javascripts/app.js"></script>
   </body>
 </html>
